--- a/src/v2/cases/【医疗】行业专栏.md
+++ b/src/v2/cases/【医疗】行业专栏.md
@@ -5,3 +5,268 @@ type: cases
 order: 22
 gz_size: "30.67"
 ---
+
+
+
+
+
+
+## 
+
+https://www.quora.com/What-are-some-of-the-business-use-cases-of-RPA-in-healthcare-industry
+
+
+Robotic process automation (RPA) might not be one of the first options discussed when considering the implementation of process automation in the healthcare industry, but it is a place where RPA has the potential for great transformation.
+
+RPA is essential to streamlining back-office processes eliminating paperwork and reducing the amount of time it takes to process files. However, RPA goes far beyond these simple tasks.
+
+It helps healthcare providers not only reduce costs and gain efficiency but also increase the quality of patient care and the amount of time spent with patients.
+
+Best uses for RPA in healthcare
+
+As hospital operates to cut costs, increase efficiency, and provide high-quality care for patients, there are many roles that RPA plays in achieving these goals. Some of them involve:
+
+Revenue cycles:
+
+The utilization of RPA in healthcare has great potential to expand far past back office functions. RPA can significantly help particularly within the revenue cycle and administrative processes. There are multiple changes in code that take place throughout any given billing cycle and RPA can accommodate and adapt to change quickly and easily. By automating time-consuming and repetitive processes as data digitization and accounts payable, RPA can lead to an improvement of billing efficiency and a reduction in write-offs, thereby saving healthcare providers much-needed resources. In addition, RPA is extremely helpful in medical records to provide analysis and data based on a patient’s condition and response. As a result, the utilization of RPA in the healthcare industry is highly advantageous to the financial performance of healthcare providers.
+
+Labor savings:
+
+Utilization of automation to replace manually intensive tasks with machines can be a significant time saver. Rather than a release of staff, RPA elevates them into higher-functioning roles that make use of the clinical expertise they have been trained for. Naturally, the consistent base of care activities found in RPA leads to employees who are more concentrated, fulfilled, and devoted to patient care and their positions. In 2009, a Texas hospital study found that greater automation in the areas of medical records, order entry, and decision support appeared to result in a reduction in deaths, difficulties, and cost. When employees are satisfied with their positions, they tend to keep working and providing care to the increasing amount of patients within the healthcare system.
+
+Patient and health plan management:
+
+Healthcare systems are now geared towards population health, an approach that aims to enhance the health of an entire human population. With this, automation is the only existing way for processes to be addressed on such a massive scale. According to the report of the Institute of Health Technology Transformation, “Automation makes population health management feasible, scalable and sustainable.”
+
+RPA sustains utilization management, care coordination, case management, and remote monitoring of patients within the healthcare system. If patients follow a standardized care path supported by RPA, it is more likely they will stay on track towards predicted outcomes. In addition, healthcare providers can see patients who have deviated from their care plans and intervene as necessary. RPA allows for continued monitoring of patients while delivering continuous high-quality care. Physicians have more time to spend with their patients as RPA helps to control their caseload while freeing up healthcare providers to focus on their work with patients.
+
+
+
+
+## 
+
+These days, it seems everybody is buzzing about robotics, machine learning, artificial intelligence and other so-called next generation technologies. One area where a number of these technologies are already helping to streamline process and improve operations is in healthcare. In particular, robotic process automation has enabled those in the healthcare field to shift a significant amount of manual, time-intensive and error-prone work from human to machine with incredible results. Robotic process automation isn’t something that’s coming in the near future. It’s already here, and it’s already changing the face of healthcare as we know it.
+
+
+
+##
+
+
+One success story for the use of Robotic Process Automation or RPA comes from [UiPath](https://www.uipath.com/rpa-in-healthcare). The healthcare provider in question is a Berlin hospital “with nearly 2,000 employees, 70,000 emergency visits and 300,000 outpatient annually”. The main reason for adopting RPA was to gain more control over its operations, which was in turn expected to contribute significantly to the satisfaction of their high number of patients.
+
+To learn more, please visit our[ Overview of Robotic Process Automation in the Healthcare Industry](http://bit.ly/2IRDoNG).
+
+Good automating!
+
+
+
+## 
+
+
+ Here are the top business use cases of RPA in Healthcare
+
+Use cases: Healthcare Payers
+
+Claim verification
+Claim exception handling
+Fraud and waste and management
+Handle claims submission through settlement
+Digitally enable provider and member self-service for legacy systems
+Renewals
+Bid management
+State on-boarding
+Network management
+Co-insurance
+
+
+Use cases: Healthcare Providers
+
+Revenue cycle
+Check eligibility
+Submit claims
+Billing
+Post and reconcile payments
+Process charge-offs and refer to third-parties
+53 Views · View Upvoters
+Upvote · 1
+Share
+ 
+
+
+
+## 
+
+
+ROBOTIC PROCESS AUTOMATION
+==========================
+
+Robotic Automation Software
+---------------------------
+
+In a survey conducted by Pew Internet, majority of respondents accentuated Robotics and Artificial intelligence as the key digital accelerators that would pervade and touch every aspect of human life by 2025.
+
+With a lot of excitement, expectations running sky-high, enterprises are keen to capitalize on the strategic and financial benefits that Digital, RPA and AI bring in for diverse industries such as Healthcare & Life Sciences, Consumer & [Retail](https://www.altencalsoftlabs.com/retail/), Manufacturing, Banking & Financials, Transport and Logistics, Unified Customer Service, and Smart home.
+
+We at ALTEN Calsoft Labs, **bring out the robots out of human**. Our automation services have enabled enterprises to automate and accelerate **business process transformation, maximize ROI and process efficiency** – so that you can concentrate on innovation and deliver winning customer experiences.
+
+Our team has in depth expertise in traditional Robotic Process Automation (RPA) for business rules and workflow driven environment, along with Cognitive automation that deals with intelligent, smart, self-learning software robots used to automate end-to- end business processes with in-built cognitive elements comprising **Machine Learning, Natural Language Processing (NLP) and enterprise grade analytics** to provide actionable insights.
+
+**RPA centre of excellence**
+
+Today, nearly every industry that comes to our mind is firming up their plans to kick start automation projects to reap benefits. We have set up a dedicated RPA centre of excellence to consult and assist our customer in crafting a scalable, future proof roadmap to build self-sustaining robots.
+
+Our strong industry expertise coupled with experience RPA evangelists create an indelible mark on  
+the culture of the organization w.r.t. RPA adoption in terms of:
+
+*   Communicating with key stakeholders viz., Sponsor, Success Champion, Change Agent etc for RPA POC/project
+*   Assessing the RPA POC/project requirements
+*   Defining business goals and objectives
+*   Identifying, Incubating, Building and Scaling up required RPA skills viz., – BA, Architect, Infrastructure engineers, Supervisors and Support
+*   Executing RPA POC/Project with clear ROI
+*   Validating the ROI and deciding on the next steps
+
+To accomplish this, we have devised a unique framework (inspired by Design Thinking) to formulate a robotic process automation strategy – beginning with IDEATE, DEFINE, POC/PROTOTYPE, TEST & SCALE.
+
+![1-1](https://www.altencalsoftlabs.com/wp-content/uploads/2017/08/1-1-100x100.png "1-1")
+
+**IDEATE**
+
+Assess Automation requirements
+
+*   Communicate & Meet with all stakeholders
+*   Educate them on RPA
+*   Assess business objectives, requirements
+*   Identify candidate business processes for automation
+*   Impact and Risk Analysis
+
+![2](https://www.altencalsoftlabs.com/wp-content/uploads/2017/08/2-100x100.png "2")
+
+**DEFINE**
+
+Define Business needs and Goals
+
+*   Identify business pain points and challenges
+*   Decide on KPIs to measure business value and ROI
+*   Articulate benefits clearly
+
+![3](https://www.altencalsoftlabs.com/wp-content/uploads/2017/08/3-100x100.png "3")
+
+**POC/PROTOTYE**
+
+Build optimal execution team
+
+*   Integrate right team
+    *   Who will develop the robot?
+    *   Who will test the robot?
+    *   Who will Manage the robot?
+
+*   Identify Automation tool & technology platforms
+*   Execute the POC
+*   Provide clear ROI Analysis
+
+![4](https://www.altencalsoftlabs.com/wp-content/uploads/2017/08/4-100x100.png "4")
+
+**TEST & SCALE**
+
+POC/Pilot Plan – The road ahead
+
+*   Plan for scaling up POC
+*   Build a strong consensus, and buy in on the potential benefits of automation
+*   ROI Validation
+*   Finetune approach and solution
+*   Establish a strong RPA Governance Model
+
+_Read More_ ![](/wp-content/uploads/2017/04/arrow.png)
+
+RPA USE CASES
+-------------
+
+![](https://www.altencalsoftlabs.com/wp-content/uploads/2018/03/virtual-bot.gif)
+
+Intelligent Chatbot As Virtual Travel Agents
+
+An AI driven NLP based Travel Agent that helps Online Travel Agencies (OTAs), Airline companies to engage meaningful conversations with their customers to help them search for flights and hotels. The agent answers simple customer queries using a conversational language, providing users a personalized, interactive experience.
+
+We have built bots across industries.
+
+[Talk To Us](https://www.altencalsoftlabs.com/contact-us/)
+
+ROBOTIC PROCESS AUTOMATION SERVICES
+
+RPA has evolved by leaps and bounds over the years. It has become a mainstream focus for many industries as they are trying to integrate robotics and advanced digital technology platforms to achieve true automation.
+
+*   [Industrial process](#)
+*   [Technology/Platform](#)
+
+Industrial process
+
+*   **RPA in Healthcare**
+    *   Patient data processing
+    *   Claims Underwriting and Processing
+    *   Medical Coding
+    *   Medical billing and Processing
+    *   Patient Payment Consolidation
+*   **RPA in Higher Education**
+    *   Student Payment Processing
+    *   Education ERP Automation – Oracle, PeopleSoft, Banner, Jenzabar, PowerCampus
+*   **RPA in Manufacturing**
+    *   Logistics Automation
+    *   Invoice Generation and Validation
+    *   ERP Business workflow automation
+    *   Dynamic Product price comparisons
+*   **RPA in Travel & Hospitality**
+    *   Competitor Pricing Analysis
+    *   Automated Guest Checking, Room Booking
+    *   Travel Package Selection and Recommendation
+    *   Payment Processing
+*   **RPA in Banking**
+    *   Compliance
+    *   Accounts Payable
+    *   Mortgage processing
+    *   Credit card & Loan processing
+    *   Fraud Detection
+    *   KYC process
+    *   Report Automation
+    *   Account Closure Process
+    *   Customer service
+
+*   **RPA in Retail**
+    *   Procurement & Inventory Management
+    *   Order Processing and Payments
+    *   Communication between Manufacturers, Suppliers, Third Party Logistics, and Customers
+    *   Product Data and Catalogue Management
+    *   Product Merchandizing
+    *   Demand & Supply Planning
+    *   Workforce Scheduling
+*   **RPA Software**
+    *   Load, Stress, performance testing of mobile apps
+    *   Defect Tracking & Management
+    *   Test suite automation
+*   **RPA in BPO**
+    *   Contact Centre Automation
+    *   Conversational IVR for human like response
+*   **RPA in Finance**
+    *   Accelerate period-end processing
+    *   Update master accounts and legal entities across systems
+    *   Maintain attributes across systems
+    *   Generate reports
+    *   Handle adjustments
+    *   Tax provisioning
+    *   Tax liability scenarios
+
+Technology/Platform
+
+*   Desktop Automation
+*   Screen indexing/Data extraction
+*   GUI Automation
+*   Mainframe & Legacy Workflow Automation
+
+
+
+
+## Screen Scraping From a Legacy System For Data Migration & Integration
+
+
+https://www.altencalsoftlabs.com/resource-center/casestudies/Screen-Scraping-from-a-Legacy-application-for-Data-Migration-and-Integration.pdf
+
+
